ops: Install nfpm

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,9 @@ jobs:
           mkdir -p dist
           mkdir -p bin
           cp target/scala-*/brick bin/brick
+          echo 'deb [trusted=yes] https://repo.goreleaser.com/apt/ /' | sudo tee /etc/apt/sources.list.d/goreleaser.list
+          sudo apt update
+          sudo apt install nfpm
       
       - name: Build Packages
         run: |
