--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build BRICK
 
+env:
+  VERSION: A1.0
+
 on:
   workflow_dispatch:
   push:
@@ -83,5 +86,5 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: packages
+          name: packages_${{ matrix.arch }}
           path: dist/
