--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,6 +97,10 @@ jobs:
           mkdir -p apt-repo/rpm/
           cp dist/*.rpm apt-repo/rpm/
 
+      - name: Install reprepro and createrepo_c
+        run: |
+          sudo apt install -y reprepro createrepo_c
+
       - name: Update Debian repo with reprepro
         run: |
           cd apt-repo/debian
