ops: Update package installation to use guix for createrepo_c

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Install reprepro and createrepo
         run: |
           sudo apt install -y guix reprepro
-          guix install -y createrepo-c
+          guix install createrepo-c
 
       - name: Update Debian repo with reprepro
         run: |
