--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,7 +117,8 @@ jobs:
 
       - name: Update YUM repo with createrepo
         run: |
-          createrepo_c --update apt-repo/rpm
+          which createrepo*
+          createrepo --update apt-repo/rpm
 
       - name: Commit & push updated repo
         run: |
