--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
           sudo apt-get install -y clang lld libunwind-dev
 
       - name: Compile
-        run: sbt nativeLink
+        run: sbt clean nativeLink
 
       - name: Upload Native Binary
         uses: actions/upload-artifact@v4
