--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,6 +174,7 @@ jobs:
 
       - name: Install reprepro and createrepo
         run: |
+          sudo apt-get update
           sudo apt install -y guix reprepro
           guix install createrepo-c
 
